<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
	android:focusableInTouchMode="true">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/layer_item_selector" 
    	android:padding="3dp">
	    <LinearLayout
	  	   android:layout_width="match_parent"
	  	   android:layout_height="wrap_content"
	  	   android:orientation="horizontal"
	  	   android:paddingTop="5dp"
	  	   android:paddingBottom="5dp"
           android:focusable="true"
	       android:focusableInTouchMode="true">
	  	   <EditText 
	  	       android:id="@+id/title"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.7"
	  	       android:layout_height="wrap_content"
	  	       android:hint="@string/column_title_hint"
	  	       android:layout_marginRight="20dp"
	  	       android:nextFocusUp="@+id/item_container"
	  	       />
	  	   <ToggleButton 
			   android:id="@+id/switcher"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.3"
			   android:layout_height="wrap_content"
			   android:textOn="@string/column_switcher_on"
			   android:textOff="@string/column_switcher_off"/>
	    </LinearLayout> 
	    <LinearLayout
	  	   android:layout_width="match_parent"
	  	   android:layout_height="wrap_content"
	  	   android:orientation="horizontal"
	  	   android:paddingTop="5dp"
	  	   android:paddingBottom="5dp">
	  	   <TextView 
	  	       android:id="@+id/start_time_text"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.15"
	  	       android:layout_height="wrap_content"
	  	       android:textSize="14sp"
	  	       android:text="@string/column_start_time_text"
	  	       android:gravity="right"
	  	       android:layout_marginRight="5dp"
	  	       />
	  	   <TextView 
	  	       android:id="@+id/start_time"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.35"
	  	       android:layout_height="wrap_content"
	  	       android:textSize="26sp"
	  	       />
	  	   <TextView 
	  	       android:id="@+id/end_time_text"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.15"
	  	       android:layout_height="wrap_content"
	  	       android:textSize="14sp"
	  	       android:text="@string/column_end_time_text"
	  	       android:gravity="right"
	  	       android:layout_marginRight="5dp"
	  	       />
	  	   <TextView 
	  	       android:id="@+id/end_time"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.35"
	  	       android:textSize="26sp"
	  	       android:layout_height="wrap_content"
	  	       />
	    </LinearLayout>  
	    <LinearLayout
	  	   android:layout_width="match_parent"
	  	   android:layout_height="wrap_content"
	  	   android:orientation="horizontal"
	  	   android:paddingTop="5dp"
	  	   android:paddingBottom="5dp">
	  	   <ImageView 
	  	       android:layout_width="wrap_content"
	  	       android:layout_height="wrap_content"
	  	       android:src="@drawable/ic_action_brightness_medium"
	  	       />
	  	   <TextView 
	  	       android:layout_width="wrap_content"
	  	       android:layout_height="wrap_content"
	  	       android:layout_gravity="center_vertical"
	  	       android:text="@string/column_brightness"/>
	  	   <SeekBar 
	  	       android:id="@+id/brightness" 
	  	       android:max="255" 
	  	       android:layout_width="match_parent" 
	  	       android:layout_height="wrap_content">	       
	  	   </SeekBar>
	    </LinearLayout>   
	    <LinearLayout
	  	   android:layout_width="match_parent"
	  	   android:layout_height="wrap_content"
	  	   android:orientation="horizontal"
	  	   android:paddingTop="5dp"
	  	   android:paddingBottom="5dp">
	  	   <ImageView 
	  	       android:layout_width="wrap_content"
	  	       android:layout_height="wrap_content"
	  	       android:src="@drawable/ic_action_volume_on"
	  	       />
	  	   <TextView 
	  	       android:layout_width="wrap_content"
	  	       android:layout_height="wrap_content"
	  	       android:layout_gravity="center_vertical"
	  	       android:text="@string/column_sound_mode_text"/>
	  	   <Spinner  
	  	       android:id="@+id/sound_mode"
			   android:layout_width="fill_parent"
			   android:layout_height="wrap_content"
			   android:drawSelectorOnTop="false"/>
	    </LinearLayout>   
	    <RelativeLayout
	  	   android:layout_width="match_parent"
	  	   android:layout_height="wrap_content"
	  	   android:paddingTop="5dp"
	  	   android:paddingBottom="5dp">
	  	   <CheckBox 
			   android:id="@+id/repeat_day"
	  	       android:layout_width="wrap_content"
	  	       android:layout_height="wrap_content"
	  	       android:text="@string/column_repeat_day"
	  	       android:layout_alignParentRight="true"/>	    
	    </RelativeLayout>   
	    <LinearLayout
	  	   android:layout_width="match_parent"
	  	   android:layout_height="wrap_content"
	  	   android:orientation="horizontal"
	  	   android:paddingTop="5dp"
	  	   android:paddingBottom="5dp">
	  	   <ToggleButton 
			   android:id="@+id/week_mon"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.14"
			   android:layout_height="wrap_content"
			   android:textSize="10sp"
			   android:textOn="@string/column_week_mon"
			   android:textOff="@string/column_week_mon"
			   android:enabled="false"/>
	  	   <ToggleButton 
			   android:id="@+id/week_tue"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.14"
			   android:textSize="10sp"
			   android:layout_height="wrap_content"
			   android:textOn="@string/column_week_tue"
			   android:textOff="@string/column_week_tue"
			   android:enabled="false"/>
	  	   <ToggleButton 
			   android:id="@+id/week_wed"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.14"
			   android:textSize="10sp"
			   android:layout_height="wrap_content"
			   android:textOn="@string/column_week_wed"
			   android:textOff="@string/column_week_wed"
			   android:enabled="false"/>
	  	   <ToggleButton 
			   android:id="@+id/week_thu"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.14"
			   android:textSize="10sp"
			   android:layout_height="wrap_content"
			   android:textOn="@string/column_week_thu"
			   android:textOff="@string/column_week_thu"
			   android:enabled="false"/>
	  	   <ToggleButton 
			   android:id="@+id/week_fri"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.14"
			   android:textSize="10sp"
			   android:layout_height="wrap_content"
			   android:textOn="@string/column_week_fri"
			   android:textOff="@string/column_week_fri"
			   android:enabled="false"/>
	  	   <ToggleButton 
			   android:id="@+id/week_sat"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.14"
			   android:textSize="10sp"
			   android:layout_height="wrap_content"
			   android:textOn="@string/column_week_sat"
			   android:textOff="@string/column_week_sat"
			   android:enabled="false"/>
	  	   <ToggleButton 
			   android:id="@+id/week_sun"
	  	       android:layout_width="0dp"
	  	       android:layout_weight="0.14"
			   android:textSize="10sp"
			   android:layout_height="wrap_content"
			   android:textOn="@string/column_week_sun"
			   android:textOff="@string/column_week_sun"
			   android:enabled="false"/>
	    </LinearLayout>         
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    >	    
	</LinearLayout>    
</LinearLayout>
